--- a/views/layout.html
+++ b/views/layout.html
@@ -50,8 +50,8 @@
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
     <div class="w2p_flash alert alert-dismissable">{{=response.flash or ''}}</div>
-    <!-- Navbar ======================================= 
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="width:600px" display="inline-block">
+    <!-- Navbar ======================================= -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -59,8 +59,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>-->
-          <!--{{=response.logo or ''}}
+          </button>
+          <!--{{=response.logo or ''}}-->
           <a href="#"><img src="http://i.imgur.com/lRlZM5J.png" height="65px"/></a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -72,7 +72,7 @@
           {{pass}}
         </div>
       </div>
-    </nav>-->
+    </nav>
     <!-- Masthead ===================================== -->
     {{block header}}
     {{end}}
