--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -210,6 +210,19 @@ span.psw {
     padding-bottom: 10px;
 }
 
+#whitespace {
+    padding: 10px;
+    margin-bottom: 30px;
+}
+
+#bottombar {
+    padding: 10px;
+    background-color: #d8635f;
+    color: #fff;
+    font-size: 10px;
+    height: 50px;
+}
+
 .side_login_button{
     padding-left: 10px;
 }
