--- a/views/default/index.html
+++ b/views/default/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="form-group" id="form_invite">
                     <div>
-                        <input class="form-control string" v-model="form_invite_list" placeholder="Invite" type="text"/>
+                        <input class="form-control string" v-model="form_invite_list" placeholder="Separate attendees by ','" type="text"/>
                         <span class="help-block"></span>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                             <span class="help-block"></span>
                         </div>
                         <div>
-                            <input class="form-control string" v-model="form_edit_invite_list" placeholder="Invite" type="text"/>
+                            <input class="form-control string" v-model="form_edit_invite_list" placeholder="Separate attendees by ','" type="text"/>
                             <span class="help-block"></span>
                         </div>
                         <div class="form-group">
