--- a/views/default/index.html
+++ b/views/default/index.html
@@ -23,7 +23,7 @@
 
 {{end}}
 
-<div class="sidebar">
+<!--<div class="sidebar">
     <div class = "side_login_button">
         <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
     </div>
@@ -43,6 +43,7 @@
 
 
 </div>
+-->
 
 <!-- Use for reference for sidebar ^-->
 <div id="id01" class="modal">
