make small changes to navbar link colors

--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -3,7 +3,9 @@ body {
     background-color: #556180;
 }
 
-
+a:hover {
+    color: #333;
+}
 .main_content{
     background-color: white;
     text-align:left;
