--- a/views/default/event.html
+++ b/views/default/event.html
@@ -7,13 +7,28 @@
     var get_grid = "{{=URL('api', 'get_grid', vars=dict(post_id=id))}}";
     var update_grid_url = "{{=URL('api', 'update_grid', vars=dict(id=id))}}";
   </script>
-  
 
 {{end}}
 
+
 <div id="vue-div" class="display:none">
-  
- 
+  <div class="eventcontainer">
+
+      <div class="eventheader">${name} <br>
+      <p>{{=icon_usercircle}} <em>hosted by: </em>${author_name}<br></p>
+      <p>${event_description}</p>
+      {{=icon_marker}} ${location}<br>
+      {{=icon_calendar_o}} ${start_date} to ${end_date}<br>
+      {{=icon_clock}} ${start_time} to ${end_time}
+      </div>
+
+      <div class="attendinfo">
+        Invited: ${invite_list}
+      </div>
+
+
+      <div class="calinfo">
+
   <table border="1" class="event_grid">
     <thead>
       {{for x in range(0, width + 1): }}
@@ -52,7 +67,6 @@
           
         {{pass}}
       </tr>
-      
 
     {{pass}}
 
@@ -60,13 +74,14 @@
     </tbody>
     
   </table>
+      <button v-on:click="show_intervals({{=width}}, {{=height}})" v-on:load="load_grid()">show/hide 30 min interval</button>
+      </div>
 
-
-  <button v-on:click="show_intervals({{=width}}, {{=height}})" v-on:load="load_grid()">show/hide 30 min interval</button>
-
-
-
-
+ <div class="eventfooter">
+     <span class="pull-right">&copy; 2016 AreYouFree?</span>
+     <span class="pull-left"><em>Contributors: Peyton Fonck, Jenna Wu, Leslie Lau, Maaz Siddiqui</em></span>
+ </div>
+  </div>
   
 <!--
     <table border="1">
@@ -89,11 +104,3 @@
  -->
 
 </div>
-  
-
- 
-
-
-
-
-
