delete some events

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -40,29 +40,20 @@
         Copyright © 2016<br>
         Contributors: Peyton Fonck, Jenna Wu, Leslie Lau, Maaz Siddiqui
     </div>
-<<<<<<< HEAD
-=======
-
-
 </div>
--->
 
-<!-- Use for reference for sidebar ^-->
+
+<!-- Use for reference for sidebar
 <div id="id01" class="modal">
     <form class="modal-content animate" action="action_page.php">
     <div class="imgcontainer">
         <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
         <img src="http://i.imgur.com/lRlZM5J.png" alt="logo" class="avatar">
     </div>
->>>>>>> master
 
 
 </div>
 -->
-
-<!-- Use for reference for sidebar ^-->
-
-
 <body>
     <div style="width:800px; margin:0 auto;">
 
