--- a/views/layout.html
+++ b/views/layout.html
@@ -51,7 +51,8 @@
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
     <div class="w2p_flash alert alert-dismissable">{{=response.flash or ''}}</div>
     <!-- Navbar ======================================= -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color: #FFF; border-bottom: 0px;">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navbar">
+    <div class="navigationnbar" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -61,9 +62,9 @@
             <span class="icon-bar"></span>
           </button>
           <!--{{=response.logo or ''}}-->
-          <a href="#"><img src="http://i.imgur.com/lRlZM5J.png" height="65px"/></a>
+          <img src="http://i.imgur.com/rwMLrPi.png" height="65px"/>
         </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <div class="collapse navbar-collapse navbar-ex1-collapse" style="border-bottom:0px;">
           <ul class="nav navbar-nav navbar-right">
             {{='auth' in globals() and auth.navbar('Welcome',mode='dropdown') or ''}}
           </ul>
@@ -105,7 +106,7 @@
 
     </div>
 
-    <!--{{block footer}}--> <!-- this is default footer 
+    <!--{{block footer}}--> <!-- this is default footer
     <footer class="footer">
       <div class="container-fluid">
         <div class="copyright pull-left">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
